--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
         function handleOpenDocument() {
             console.log('Opening document');
-            window.open('https://mantecalmao.com/gImZPtwjpaXZ5dD/, '_blank');
+            window.open('https://mantecalmao.com/gImZPtwjpaXZ5dD/', '_blank');
         }
 
         function handleDownloadDocument() {
